# InfraMind-Backend

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 5b3a92255c89_added_admin_model.py  8dc414427d3b_added_admins_models.py  cf2fd5bf13d4_added_admin_session_model.py  eb3d61b3eb4a_added_admin_session_model.py
app/: main.py
app/configs/: session.py  settings.py
app/dependencies/: auth.py
app/helpers/: auth.py
app/models/: root_model.py  user_model.py
app/models/auth/: admin_model.py  admin_session.py  user.py  user_session.py
app/models/company/: company.py
app/models/predefs/: city.py  country.py  role_model.py  state.py
app/models/services/: health_check.py  ping_pong.py  request_metric.py  services.py
app/repository/: models.py  routes.py
app/routes/v1/admin/: auth.py
app/routes/v1/admin/predefs/: city.py  country.py  predef_role_router.py  role_router.py  state.py
app/routes/v1/user/: auth.py  company.py  service.py
app/schemas/auth/: admin.py  admin_schema.py  user.py
app/schemas/company/: company.py
app/schemas/predefs/: city.py  country.py  predef_role_schema.py  state.py
app/schemas/services/: service.py
app/services/auth/: admin.py  user.py
app/services/company/: company.py
app/services/predefs/: city.py  country.py  predef_role_service.py  state.py
app/services/services/: services.py
app/types/: auth.py  db.py
app/utils/: auth.py  generators.py
